# ASD-with-SSL

./: .gitignore  .mcp.json  Baseline_model_with_logmel_spectrogram_avg_and_aucroc_metric.ipynb  Classifer_with_resnet_and_auroc.ipynb  EDA.ipynb  EDAtrials.ipynb  README.md  baseline.ipynb  dataframesstftandlogmel.ipynb  dino_asd.ipynb  dino_asd_2.ipynb  dino_asd_v2.ipynb  gitssh  gitssh.pub  pyproject.toml  requirements-gpu-cu128.txt  requirements.txt
EDAandResNet18classifier/: Baseline_model_with_logmel_spectrogram_avg_and_aucroc_metric.ipynb  Classifer_with_resnet_and_auroc.ipynb  dataframesstftandlogmel.ipynb
audio_ssl/: JEPA_literature_review.md  README.md  __init__.py
audio_ssl/configs/: autoencoder_baseline.yaml  beats_dino.yaml  beats_fan.yaml  beats_jepa.yaml  dino_baseline.yaml  dino_fan.yaml  jepa_baseline.yaml  jepa_fan.yaml  jepa_fan_stationary.yaml  lejepa_baseline.yaml  lejepa_fan.yaml
audio_ssl/scripts/: aggregate_results.py  download_beats.py  download_mimii.py  eval_autoencoder.py  eval_ensemble.py  eval_jepa.py  eval_jepa_embedding.py  jepa_eval_task.sh  jepa_train_task.sh  plot_comparison.py  plot_roc_grid.py  plot_roc_snr_avg.py  plot_tsne.py  run_baseline_inside.sh  run_baseline_salloc.sh  run_baseline_worker.sh  run_beats_jepa_inside.sh  run_beats_jepa_salloc.sh  run_dino_inside.sh  run_dino_salloc.sh  (+13 more)
dino_asd/: __init__.py  config.py  data.py  evaluation.py  features.py  models.py  training.py
notebooks/: 01_eda.ipynb  02_features_stft_logmel.ipynb  03_baseline_logmel_avg.ipynb  04_resnet18_classifier.ipynb
old/: baseline.ipynb
(+45 files in other folders)
